[gd_scene load_steps=5 format=3 uid="uid://di52013lcw5l1"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_4dhqh"]
[ext_resource type="Texture2D" uid="uid://b7ijuxdbagyrm" path="res://Images/SpaceBackground_00.png" id="1_xluo7"]
[ext_resource type="PackedScene" uid="uid://c4mq0md77sau4" path="res://Menus/Scenes/ship_build_menu_00.tscn" id="2_avv8s"]
[ext_resource type="Texture2D" uid="uid://bbeg58k3u15p7" path="res://Images/SpaceGameText.png" id="2_l1mdo"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4dhqh")
build_menu = ExtResource("2_avv8s")

[node name="BackgroundTexture" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_xluo7")
metadata/_edit_lock_ = true

[node name="ShipPoint" type="Node2D" parent="."]
position = Vector2(576, 359)

[node name="ShipAnchor" type="Node2D" parent="ShipPoint"]
position = Vector2(168, 0)

[node name="SpaceGameTexture" type="TextureRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_l1mdo")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 38.0
offset_top = 128.0
offset_right = 506.0
offset_bottom = 534.0
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 12

[node name="FlyButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fly Ship"

[node name="BuildButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Build Ship"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="Control/VBoxContainer/FlyButton" to="." method="_on_fly_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
